# Exploring_Multiple_Dbs

./: Makefile  README.md  pyproject.toml  requirements.txt  webapp.py
backend/: Makefile  main.py  pyproject.toml  test.py
backend/app/: main.py
backend/app/api/: neo4j_api.py
backend/app/config/db/: mongo_conn.py  redis_conn.py
backend/app/models/: org.py  user.py
backend/app/routes/mongo/: org.py  user.py
backend/app/routes/neo4j/: user.py
backend/app/services/: mongodb_service.py  neo4j_service.py  redis_service.py
backend/core/: redis_client.py
backend/routers/: redis_router.py
backend/services/: redis_service.py
frontend/: webapp.py
